# small-app

./: CMakeLists.txt  CSVWatchlist.cpp  CSVWatchlist.h  Controller.cpp  Controller.h  FileWatchlist.cpp  FileWatchlist.h  HTMLWatchlist.cpp  HTMLWatchlist.h  Movie.cpp  Movie.h  MovieValidator.cpp  MovieValidator.h  Movies.txt  README.md  Repository.cpp  Repository.h  RepositoryExceptions.cpp  RepositoryExceptions.h  UI.cpp  UI.h  Watchlist.cpp  Watchlist.h  main.cpp
